refactor: prepare for internal release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ethereum-blockies",
-  "version": "0.1.1",
+  "name": "@exodus/ethereum-blockies",
+  "version": "0.1.1-exodus.1",
   "description": "A tiny library for generating blocky identicons.",
   "main": "blockies.js",
   "scripts": {
